src/compile/__fixtures__/invalid/bad-exports/sketch.js
function sketch(p, state) {
  p.setup = () => p.createCanvas(400, 400);
  p.draw = () => {
    drawHelper(p);
  };
}
